--- a/lab1/lab1_2/demo/pom.xml
+++ b/lab1/lab1_2/demo/pom.xml
@@ -43,6 +43,18 @@
   <artifactId>converter-gson</artifactId>
   <version>2.9.0</version>
 </dependency>
+
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.6.1</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.6.1</version>
+</dependency>
+
 </dependencies>
 
 
