--- a/lab1/lab1_5/demo/pom.xml
+++ b/lab1/lab1_5/demo/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.ies102435</groupId>
+  <groupId>com.ies102435_05</groupId>
   <artifactId>demo</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -44,18 +44,10 @@
   <version>2.9.0</version>
 </dependency>
 
-<dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-api</artifactId>
-    <version>2.6.1</version>
-</dependency>
-<dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-core</artifactId>
-    <version>2.6.1</version>
-</dependency>
+
 
 </dependencies>
+
 
 
 </project>
