Movie Database working(ish)

--- a/lab3/lab3_3/pom.xml
+++ b/lab3/lab3_3/pom.xml
@@ -54,6 +54,24 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+        	        <groupId>org.codehaus.mojo</groupId>
+        	        <artifactId>exec-maven-plugin</artifactId>
+        	        <version>3.1.0</version>
+        	  <executions>
+        	        <execution>
+        	                <id>my-execution</id>
+        	                <phase>package</phase>
+        	                <goals>
+        	                        <goal>java</goal>
+        	                </goals>
+        	        </execution>
+        	  </executions>
+        	  <configuration>
+        	        <mainClass>com.ies.lab3_3.Lab33Application</mainClass>
+        	  </configuration>
+        	</plugin>
 		</plugins>
 	</build>
 
